--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
     "@angular/router": "~7.1.0",
     "compression": "^1.7.3",
     "core-js": "^2.5.4",
+    "moment": "^2.24.0",
     "prismjs": "^1.15.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular-devkit/build-angular": "^0.13.4",
     "@angular/cli": "~7.1.0",
-    "@angular/compiler-cli": "~7.1.0",
+    "@angular/compiler-cli": "^7.2.7",
     "@angular/language-service": "~7.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
